[metadata]
name = msf_api
version = 0.0.1
author = yosiz
author_email = yosiz0 at gm
description = python client for MSF api (Marvel Strike Force)
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/yosiz/msf_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU3 License
    Operating System :: OS Independent

[options]
# packages = msf_api
install_requires = 
    requests
    requests-cache
    pydantic
    importlib; python_version == "3.8"
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src